Fix some indentations and import quotes

--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -1,6 +1,6 @@
 {% extends "layouts/_base.html" %}
 
-{% from 'components/panel/_macro.njk' import onsPanel %}
+{% from "components/panel/_macro.njk" import onsPanel %}
 
 {% set page_title = _("Confirmation email sent") %}
 {% set hide_sign_out_button = content.hide_sign_out_button %}
