--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -1,7 +1,7 @@
 {% extends "layouts/_base.html" %}
 
-{% from 'components/panel/_macro.njk' import onsPanel %}
-{% from 'components/button/_macro.njk' import onsButton %}
+{% from "components/panel/_macro.njk" import onsPanel %}
+{% from "components/button/_macro.njk" import onsButton %}
 
 {% set hide_sign_out_button = content.hide_sign_out_button %}
 {% set page_title = _("Feedback sent") %}
