--- a/templates/individual_response/confirmation-post.html
+++ b/templates/individual_response/confirmation-post.html
@@ -1,7 +1,7 @@
 {% extends "layouts/_base.html" %}
 
-{% from 'components/button/_macro.njk' import onsButton %}
-{% from 'components/panel/_macro.njk' import onsPanel %}
+{% from "components/button/_macro.njk" import onsButton %}
+{% from "components/panel/_macro.njk" import onsPanel %}
 
 {% set save_on_signout = true %}
 
