--- a/templates/individual_response/interstitial.html
+++ b/templates/individual_response/interstitial.html
@@ -15,15 +15,15 @@
     {{
         onsButton({
             "text": _("Request separate census") ,
-            "variants": 'timer',
-            "classes": 'ons-u-mb-m ons-u-mt-s',
+            "variants": "timer",
+            "classes": "ons-u-mb-m ons-u-mt-s",
             "url": next_location_url,
             "attributes": {
-            'data-qa': 'btn-submit',
-            "data-ga-category": "Submit button",
-            "data-ga-action": "Request separate census",
-            "data-ga-label": "Request separate census button click",
-            "data-ga": "click"
+                "data-qa": "btn-submit",
+                "data-ga-category": "Submit button",
+                "data-ga-action": "Request separate census",
+                "data-ga-label": "Request separate census button click",
+                "data-ga": "click"
             }
         })
     }}
