--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -1,7 +1,7 @@
 {% extends "layouts/_questionnaire.html" %}
 
-{% from 'macros/helpers.html' import format_paragraphs %}
-{% from 'macros/helpers.html' import interviewer_note %}
+{% from "macros/helpers.html" import format_paragraphs %}
+{% from "macros/helpers.html" import interviewer_note %}
 
 {% set save_on_signout = true %}
 {% set continue_button_text = _("Continue") %}
