--- a/templates/partials/feedback-call-to-action.html
+++ b/templates/partials/feedback-call-to-action.html
@@ -1,4 +1,4 @@
-{% from 'components/feedback/_macro.njk' import onsFeedback %}
+{% from "components/feedback/_macro.njk" import onsFeedback %}
 
 {# djlint:off #}
 {{
