--- a/templates/partials/preview-question.html
+++ b/templates/partials/preview-question.html
@@ -1,5 +1,5 @@
-{% from 'components/panel/_macro.njk' import onsPanel %}
-{% from 'macros/helpers.html' import format_paragraphs %}
+{% from "components/panel/_macro.njk" import onsPanel %}
+{% from "macros/helpers.html" import format_paragraphs %}
 
 {% set answers = question.answers %}
 <div class="ons-summary__item">
