--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -1,8 +1,8 @@
 {% from "components/question/_macro.njk" import onsQuestion %}
 {% from "components/panel/_macro.njk" import onsPanel %}
 {% from "components/error/_macro.njk" import onsError %}
-{% from 'macros/helpers.html' import format_paragraphs %}
-{% from 'macros/helpers.html' import interviewer_note %}
+{% from "macros/helpers.html" import format_paragraphs %}
+{% from "macros/helpers.html" import interviewer_note %}
 
 {% set form = content.form %}
 {% set display = namespace(guidance=False) %}
