--- a/templates/partials/summary/list-summary.html
+++ b/templates/partials/summary/list-summary.html
@@ -1,6 +1,7 @@
 {% from "components/summary/_macro.njk" import onsSummary %}
 
 {% if list.editable %}
+    {# djlint:off #}
     {% set rows = map_list_collector_config(
         list_items=list.list_items,
         render_icon=True,
@@ -9,6 +10,7 @@
         remove_link_text=_("Remove"),
         remove_link_aria_label=_("Remove {item_name}")
     ) %}
+    {# djlint:on #}
 {% else %}
     {% set rows = map_list_collector_config(
             list_items=list.list_items,
