Add linting step, add endblock names

--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -44,4 +44,4 @@
     {% if content.show_feedback_call_to_action %}
         {% include "partials/feedback-call-to-action.html" %}
     {% endif %}
-{% endblock %}
+{% endblock main %}
