--- a/templates/confirmation-email.html
+++ b/templates/confirmation-email.html
@@ -11,4 +11,4 @@
     {% endif %}
     <h1 data-qa="title">{{ _("Send a confirmation email") }}</h1>
     {% include "partials/confirmation-email-form.html" %}
-{% endblock %}
+{% endblock main %}
