--- a/templates/errors/401.html
+++ b/templates/errors/401.html
@@ -24,4 +24,4 @@
         <h2>{{ _("All other surveys") }}</h2>
         <p>{{ other_access_code }}</p>
     {% endif %}
-{% endblock %}
+{% endblock main %}
