--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -18,4 +18,4 @@
         <h2>{{ _("All other surveys") }}</h2>
         <p>{{ other_contact_us }}</p>
     {% endif %}
-{% endblock %}
+{% endblock main %}
