--- a/templates/errors/previously-submitted.html
+++ b/templates/errors/previously-submitted.html
@@ -7,4 +7,4 @@
     <h1>{{ _("This page is no longer available") }}</h1>
     <p>{{ _("Your survey has been submitted") }}</p>
     <p>{{ return_previous }}</p>
-{% endblock %}
+{% endblock main %}
