--- a/templates/individual_response/question.html
+++ b/templates/individual_response/question.html
@@ -10,4 +10,4 @@
             {{ _("To request a census in a different format or for further help, please <a href='{contact_us_url}'>contact us</a>").format(contact_us_url=contact_us_url) }}
         </p>
     {% endif %}
-{% endblock %}
+{% endblock after_submit_button_content %}
