--- a/templates/multiple_survey.html
+++ b/templates/multiple_survey.html
@@ -22,4 +22,4 @@
         <p>{{ _("Close this window to continue with your current survey") }}.</p>
     {% endcall %}
     {# djlint:on #}
-{% endblock %}
+{% endblock main %}
