--- a/templates/signed-out.html
+++ b/templates/signed-out.html
@@ -26,4 +26,4 @@
             {{ _("To resume the survey, <a href='{url}'>re-enter your access code</a>.").format(url = redirect_url) }}
         </p>
     {% endif %}
-{% endblock %}
+{% endblock main %}
