--- a/templates/errors/error.html
+++ b/templates/errors/error.html
@@ -6,4 +6,4 @@
         <p data-qa="retry">{{ retry_message.format(retry_url=retry_url) }}</p>
     {%- endif -%}
     <p>{{ contact_us_message.format(contact_us_url=contact_us_url) }}</p>
-{% endblock %}
+{% endblock main %}
