--- a/templates/errors/submission-failed.html
+++ b/templates/errors/submission-failed.html
@@ -19,4 +19,4 @@
         <h2>{{ _("All other surveys") }}</h2>
         <p>{{ other_contact_us }}</p>
     {% endif %}
-{% endblock %}
+{% endblock main %}
