--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -6,9 +6,9 @@
 {% set save_on_signout = true %}
 
 {% block form_content %}
-    {% block form_title %}{% endblock %}
+    {% block form_title %}{% endblock form_title %}
     <div class="ons-u-mb-m">{% include "partials/summary/summary.html" %}</div>
-{% endblock -%}
+{% endblock form_content -%}
 
 {% block submit_button %}
     {# djlint:off #}
@@ -26,4 +26,4 @@
         })
     }}
     {# djlint:on #}
-{% endblock %}
+{% endblock submit_button %}
