--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -104,4 +104,4 @@
     {% if content.show_feedback_call_to_action %}
         {% include "partials/feedback-call-to-action.html" %}
     {% endif %}
-{% endblock %}
+{% endblock main %}
