Fix blocks and some indentation

--- a/templates/layouts/_questionnaire.html
+++ b/templates/layouts/_questionnaire.html
@@ -9,7 +9,8 @@
 {% block main %}
     <button type="submit" class="ons-u-d-no" hidden></button>
 
-    {% block form_errors %}{% endblock form_errors %}
+    {% block form_errors %}
+    {% endblock form_errors %}
 
     {% block form_content %}
         <div class="group">
