--- a/templates/calculatedsummary.html
+++ b/templates/calculatedsummary.html
@@ -1,3 +1,5 @@
 {% extends "layouts/_calculatedsummary.html" %}
 
-{% block form_title %}<h1 data-qa="calculated-summary-title">{{ content.summary.title }}</h1>{% endblock form_title %}
+{% block form_title %}
+    <h1 data-qa="calculated-summary-title">{{ content.summary.title }}</h1>
+{% endblock form_title %}
