--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -6,7 +6,8 @@
 {% set save_on_signout = true %}
 
 {% block form_content %}
-    {% block form_title %}{% endblock form_title %}
+    {% block form_title %}
+    {% endblock form_title %}
     <div class="ons-u-mb-m">{% include "partials/summary/summary.html" %}</div>
 {% endblock form_content -%}
 
