--- a/templates/partials/answer.html
+++ b/templates/partials/answer.html
@@ -18,16 +18,18 @@
     {% endset -%}
 {% endif %}
 {% if errors | length > 0 %}
+    {# djlint:off #}
     {% set error = {
-            "text": errors[0],
-            "id": answer.id ~ '-error',
-            "attributes": {
-                "data-ga": "error",
-                "data-ga-category": "Error",
-                "data-ga-action": answer.type,
-                "data-ga-label": question.id
-            }
-        } %}
+        "text": errors[0],
+        "id": answer.id ~ '-error',
+        "attributes": {
+            "data-ga": "error",
+            "data-ga-category": "Error",
+            "data-ga-action": answer.type,
+            "data-ga-label": question.id
+        }
+    } %}
+    {# djlint:on #}
 {% endif %}
 {% include "partials/answers/" ~ answer.type|lower ~ ".html" %}
 {{ answer_guidance }}
