--- a/templates/partials/answers/date.html
+++ b/templates/partials/answers/date.html
@@ -2,59 +2,59 @@
 {%- set day_field = form.fields[answer['id']]['day'] -%}
 {%- set month_field = form.fields[answer['id']]['month'] -%}
 {%- set year_field = form.fields[answer['id']]['year'] -%}
+{# djlint:off #}
 {%- set config = {
-"id": answer.id,
-"legendOrLabel": answer.label,
-"dontWrap": not answer.label,
-"description": answer.description,
-"attributes": {
-"data-qa": "widget-date"
-},
-"mutuallyExclusive": mutuallyExclusive,
-"error": error
+    "id": answer.id,
+    "legendOrLabel": answer.label,
+    "dontWrap": not answer.label,
+    "description": answer.description,
+    "attributes": {
+    "data-qa": "widget-date"
+    },
+    "mutuallyExclusive": mutuallyExclusive,
+    "error": error
 } -%}
 {%- if day_field -%}
     {%- set config = config | setAttributes({
         "day": {
-        "label": {
-        "text": _("Day"),
-        "attributes": {
-        "data-qa": "label-day"
-        }
+            "label": {
+            "text": _("Day"),
+            "attributes": {
+                "data-qa": "label-day"
+            }
         },
         "name": day_field.name,
         "value": day_field._value() | e
         }
-        }) -%}
+    }) -%}
 {%- endif -%}
 {%- if month_field -%}
     {%- set config = config | setAttributes({
         "month": {
         "label": {
-        "text": _("Month"),
-        "attributes": {
-        "data-qa": "label-month"
-        }
+            "text": _("Month"),
+            "attributes": {
+                "data-qa": "label-month"
+            }
         },
         "name": month_field.name,
         "value": month_field._value() | e
         }
-        }) -%}
+    }) -%}
 {%- endif -%}
 {%- if year_field -%}
     {%- set config = config | setAttributes({
         "year": {
-        "label": {
-        "text": _("Year"),
-        "attributes": {
-        "data-qa": "label-year"
-        }
-        },
+            "label": {
+                "text": _("Year"),
+                "attributes": {
+                    "data-qa": "label-year"
+                }
+            },
         "name": year_field.name,
         "value": year_field._value() | e
         }
-        }) -%}
+    }) -%}
 {%- endif -%}
-{# djlint:off #}
 {{ onsDateInput(config) }}
-{# djlint:off #}
+{# djlint:on #}
