--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -35,10 +35,10 @@
     {# djlint:on #}
     {% if content.show_send_another_email_guidance %}
         <p>
-            <strong>{{ _("Didn't receive an email?") }}</strong>
+            <strong>{{ _("Didn’t receive an email?") }}</strong>
         </p>
         <p class="ons-u-mb-l">
-            {{ _("It can take a few minutes for the email to arrive. If it doesn't arrive, check your junk mail, or you can <a href='{send_confirmation_email_url}' id='send-another-email'>send another confirmation email</a>.").format(send_confirmation_email_url = content.send_confirmation_email_url) }}
+            {{ _('It can take a few minutes for the email to arrive. If it doesn’t arrive, check your junk mail, or you can <a href="{send_confirmation_email_url}" id="send-another-email">send another confirmation email</a>.').format(send_confirmation_email_url = content.send_confirmation_email_url) }}
         </p>
     {% endif %}
     {% if content.show_feedback_call_to_action %}
