Add new standard GA events

--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -26,9 +26,10 @@
             "url": url_for('post_submission.get_thank_you'),
             "attributes": {
                 "data-qa": "btn-done",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Done",
-                "data-ga-label": "Done button click",
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Done",
+                "data-ga-page": "Feedback",
                 "data-ga": "click"
             }
         })
