--- a/templates/partials/introduction/start-survey.html
+++ b/templates/partials/introduction/start-survey.html
@@ -8,9 +8,10 @@
     "name": "action[start_questionnaire]",
     "attributes": {
       "data-qa": "btn-submit",
-      "data-ga-category": "Submit button",
-      "data-ga-action": "Start survey",
-      "data-ga-label": "Start survey button click",
+      "data-ga-category": "Button",
+      "data-ga-action": "Start",
+      "data-ga-label": "Start Survey",
+      "data-ga-page": "Introduction",
       "data-ga": "click"
     }
   })
