--- a/templates/preview.html
+++ b/templates/preview.html
@@ -15,9 +15,10 @@
       "text": _("Back"),
       "attributes": {
         "data-ga": 'click',
-        "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous',
-        "data-ga-label": "Previous link click"
+        "data-ga-category": 'Link',
+        "data-ga-action": 'Navigate',
+        "data-ga-label": "Previous",
+        "data-ga-page": "Preview",
       }
     }
   ]
@@ -50,9 +51,10 @@
       "variants": ['small', 'secondary', 'print'],
       "attributes": {
         "data-qa": "btn-print",
-        "data-ga-category": "Print button",
-        "data-ga-action": "Open print Dialogue",
-        "data-ga-label": "Print button click",
+        "data-ga-category": "Button",
+        "data-ga-action": "View",
+        "data-ga-label": "Print Dialogue",
+        "data-ga-page": "Preview",
         "data-ga": "click"
       }
     })
@@ -65,9 +67,10 @@
       "removeDownloadAttribute": true,
       "attributes": {
         "data-qa": "btn-pdf",
-        "data-ga-category": "PDF button",
-        "data-ga-action": "Download PDF",
-        "data-ga-label": "PDF button click",
+        "data-ga-category": "Button",
+        "data-ga-action": "Download",
+        "data-ga-label": "Download PDF",
+        "data-ga-page": "Preview",
         "data-ga": "click"
       }
     })
@@ -96,9 +99,10 @@
             "close": _('Hide all'),
             "attributes": {
               "data-ga": "click",
-              "data-ga-category": "Preview Survey",
-              "data-ga-action": "Show all",
-              "data-ga-label": "Show all button click"
+              "data-ga-category": "Button",
+              "data-ga-action": "View",
+              "data-ga-label": "Show all",
+              "data-ga-page": "Preview"
             }
           },
           "itemsList": itemList
