--- a/templates/sectionsummary.html
+++ b/templates/sectionsummary.html
@@ -10,9 +10,10 @@
     "text": _("Continue"),
     "attributes": {
       "data-qa": "btn-submit",
-      "data-ga-category": "Submit button",
-      "data-ga-action": "Continue",
-      "data-ga-label": "Continue button click",
+      "data-ga-category": "Button",
+      "data-ga-action": "Submit",
+      "data-ga-label": "Continue",
+      "data-ga-page": "Section Summary",
       "data-ga": "click"
     }
   })
@@ -51,9 +52,10 @@
       "classes": "ons-u-mt-xl",
       "attributes": {
         "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Continue",
-        "data-ga-label": "Continue button click",
+        "data-ga-category": "Button",
+        "data-ga-action": "Submit",
+        "data-ga-label": "Continue",
+        "data-ga-page": "Section Summary",
         "data-ga": "click"
       }
     })
