--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -14,9 +14,10 @@
       "text": _("Back"),
       "attributes": {
         "data-ga": 'click',
-        "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous',
-        "data-ga-label": "Previous link click"
+        "data-ga-category": 'Link',
+        "data-ga-action": 'Navigate',
+        "data-ga-label": "Previous",
+        "data-ga-page": "Feedback",
       }
     }
   ]
@@ -41,10 +42,11 @@
       "classes": "ons-u-mt-xl",
       "attributes": {
         "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Send feedback",
-        "data-ga-label": "Send feedback button click",
-        "data-ga": "click"
+        "data-ga-category": "Button",
+        "data-ga-action": "Submit",
+        "data-ga-label": "Send",
+        "data-ga-page": "Feedback",
+        "data-ga": "click",
       }
     })
   }}
