--- a/templates/partials/introduction/preview.html
+++ b/templates/partials/introduction/preview.html
@@ -22,9 +22,10 @@
       "content": content,
       "summaryAttributes": {
           "data-ga": "click",
-          "data-ga-category": "Preview Survey",
-          "data-ga-action": "Open panel",
-          "data-ga-label": "Open definition panel",
+          "data-ga-category": "Accordion",
+          "data-ga-action": "Preview",
+          "data-ga-label": "Preview Question",
+          "data-ga-page": "Introduction",
       }
     } %}
 
@@ -39,9 +40,10 @@
             "close": _('Hide all'),
             "attributes": {
               "data-ga": "click",
-              "data-ga-category": "Preview Survey",
-              "data-ga-action": "Show all",
-              "data-ga-label": "Show all button click"
+              "data-ga-category": "Button",
+              "data-ga-action": "View",
+              "data-ga-label": "Show all",
+              "data-ga-page": "Introduction",
             }
           },
           "itemsList": accordionItems
