--- a/templates/partials/summary/collapsible-summary.html
+++ b/templates/partials/summary/collapsible-summary.html
@@ -51,9 +51,10 @@
       "close": _('Hide all'),
       "attributes": {
         "data-ga": "click",
-        "data-ga-category": "Preview Survey",
-        "data-ga-action": "Show all",
-        "data-ga-label": "Show all button click"
+        "data-ga-category": "Button",
+        "data-ga-action": "View",
+        "data-ga-label": "Collapsible Answers",
+        "data-ga-page": "Summary"
       }
   },
   "itemsList": itemList
