Add more events

--- a/templates/partials/confirmation-email-form.html
+++ b/templates/partials/confirmation-email-form.html
@@ -10,8 +10,9 @@
     "attributes": {
       "data-ga": "error",
       "data-ga-category": "Error",
-      "data-ga-action": "Send confirmation",
-      "data-ga-label": "Confirmation email error",
+      "data-ga-action": "Display",
+      "data-ga-label": "Invalid / Missing Email",
+      "data-ga-page": "Confirmation Email"
     }
   } %}
 {% endif %}
@@ -40,9 +41,10 @@
     "classes": "ons-u-mt-s",
     "attributes": {
       "data-qa": "btn-submit",
-      "data-ga-category": "Submit button",
-      "data-ga-action": "Send confirmation",
-      "data-ga-label": "Send confirmation button click",
+      "data-ga-category": "Button",
+      "data-ga-action": "Submit",
+      "data-ga-label": "Send",
+      "data-ga-page": "Confirmation Email",
       "data-ga": "click"
     }
   })
