--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -26,9 +26,10 @@
     "content": definition_content,
     "headingAttributes": {
       "data-ga": "click",
-      "data-ga-category": "Question definition",
-      "data-ga-action": "Open panel",
-      "data-ga-label": "Open question definition panel",
+      "data-ga-category": "Accordion",
+      "data-ga-action": "View",
+      "data-ga-label": "Definition",
+      "data-ga-page": "Questionnaire",
       "data-qa": definition_id ~ "-title"
     },
     "contentAttributes": {
@@ -133,9 +134,12 @@
       "id": question.id ~ '-error',
       "attributes": {
         "data-ga": "error",
-        "data-ga-category": "Question error",
-        "data-ga-action": question.type,
-        "data-ga-label": question.id
+        "data-ga-category": "Error",
+        "data-ga-action": "Display",
+        "data-ga-label": "Question Error",
+        "data-ga-type": question.type,
+        "data-ga-identifier": question.id,
+        "data-ga-page": "Questionnaire"
       }
     } %}
     {% call onsError(config) %}
