--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -16,9 +16,10 @@
       "text": _("Back"),
       "attributes": {
         "data-ga": 'click',
-        "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous',
-        "data-ga-label": "Previous link click"
+        "data-ga-category": 'Link',
+        "data-ga-action": 'Navigate',
+        "data-ga-label": "Previous",
+        "data-ga-page": "View Submitted Response"
       }
     }
   ]
