Refactor questionnaire templates GA events

--- a/templates/partials/definition.html
+++ b/templates/partials/definition.html
@@ -6,9 +6,10 @@
   "classes": "ons-u-mb-s",
   "headingAttributes": {
     "data-ga": "click",
-    "data-ga-category": category,
-    "data-ga-action": "Open panel",
-    "data-ga-label": "Open definition panel",
+    "data-ga-category": "Accordion",
+    "data-ga-action": "View",
+    "data-ga-label": "Definition",
+    "data-ga-page": "Questionnaire",
     "data-qa": definition_id ~ "-title"
   },
   "contentAttributes": {
