--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -28,7 +28,7 @@
       "data-ga": "click",
       "data-ga-category": "Accordion",
       "data-ga-action": "View",
-      "data-ga-label": "Definition",
+      "data-ga-label": "Question Definition",
       "data-ga-page": "Questionnaire",
       "data-qa": definition_id ~ "-title"
     },
