--- a/templates/layouts/_questionnaire.html
+++ b/templates/layouts/_questionnaire.html
@@ -26,9 +26,10 @@
                 "text": continue_button_text | default(_("Save and continue")),
                 "attributes": {
                     "data-qa": "btn-submit",
-                    "data-ga-category": "Submit button",
-                    "data-ga-action": "Save and continue",
-                    "data-ga-label": "Save and continue button click",
+                    "data-ga-category": "Button",
+                    "data-ga-action": "Submit",
+                    "data-ga-label": "Save and Continue",
+                    "data-ga-page": "Questionnaire",
                     "data-ga": "click"
                 }
             })
