Add remainig GA events

--- a/templates/individual_response/interstitial.html
+++ b/templates/individual_response/interstitial.html
@@ -16,9 +16,9 @@
             "url": next_location_url,
             "attributes": {
                 'data-qa': 'btn-submit',
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Request separate census",
-                "data-ga-label": "Request separate census button click",
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Request Separate Census",
                 "data-ga": "click"
             }
         })
