--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -33,9 +33,10 @@
             "classes": "ons-u-mt-l",
             "attributes": {
                 "data-qa": "btn-submit",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Save and continue",
-                "data-ga-label": "Save and continue button click",
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Save and Continue",
+                "data-ga-page": "Interstitial",
                 "data-ga": "click"
             }
         })
