--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -7,17 +7,18 @@
 {% set hide_sign_out_button = content.hide_sign_out_button %}
 {% if account_service_todo_url %}
   {% set breadcrumbs = {
-    "ariaLabel": 'Back to surveys',
+    "ariaLabel": "Back to surveys",
     "itemsList": [
       {
         "url": account_service_todo_url,
         "id": "back-to-surveys",
         "text": _("Back to surveys"),
         "attributes": {
-          "data-ga": 'click',
-          "data-ga-category": 'Navigation',
-          "data-ga-action": 'Back to surveys',
-          "data-ga-label": 'Back to surveys link click'
+          "data-ga": "click",
+          "data-ga-category": "Link",
+          "data-ga-action": "Navigate",
+          "data-ga-label": "Back to Surveys",
+          "data-ga-page": "Thank You"
         }
       }
     ]
