--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -38,9 +38,10 @@
         "variants": ['small', 'secondary', 'print'],
         "attributes": {
           "data-qa": "btn-print",
-          "data-ga-category": "Print button",
-          "data-ga-action": "Open print Dialogue",
-          "data-ga-label": "Print button click",
+          "data-ga-category": "Button",
+          "data-ga-action": "View",
+          "data-ga-label": "Print Dialogue",
+          "data-ga-page": "View Submitted Response",
           "data-ga": "click"
         }
       })
@@ -53,9 +54,10 @@
         "removeDownloadAttribute": true,
         "attributes": {
           "data-qa": "btn-pdf",
-          "data-ga-category": "PDF button",
-          "data-ga-action": "Download PDF",
-          "data-ga-label": "PDF button click",
+          "data-ga-category": "Button",
+          "data-ga-action": "Download",
+          "data-ga-label": "Download PDF",
+          "data-ga-page": "View Submitted Response",
           "data-ga": "click"
         }
       })
