--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -20,9 +20,10 @@
       "variants": 'timer',
       "attributes": {
         "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Confirm",
-        "data-ga-label": "Confirm button click",
+        "data-ga-category": "Button",
+        "data-ga-action": "Submit",
+        "data-ga-label": "Confirm",
+        "data-ga-page": "Calculated Summary",
         "data-ga": "click"
       }
     })
