--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -5,9 +5,10 @@
   "title": title,
   "headingAttributes": {
     "data-ga": "click",
-    "data-ga-category": "definition",
-    "data-ga-action": "Open panel",
-    "data-ga-label": "Open definition panel"
+    "data-ga-category": "Accordion",
+    "data-ga-action": "View",
+    "data-ga-label": "Open Definition",
+    "data-ga-page": "Individual Response"
   }
 }) %}
   <div class="ons-u-mt-s">
